UI / functionality imprioved
